--- a/aula15/package.json
+++ b/aula15/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
+    "framer-motion": "^11.11.1",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18"
